--- a/client/main.html
+++ b/client/main.html
@@ -1,49 +1,6 @@
 <head>
   <title>simple</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/skeleton.css">
 </head>
 
-<body>
-
-  {{> authorize}}
-  {{#if currentUser}}
-    {{#if choosing}}
-      {{> session }}
-    {{/if}}
-
-    {{#if chatting}}
-      {{> chat}}
-    {{/if}}
-  {{/if}}
-
-</body>
-
-<template name="authorize">
-  {{> loginButtons }}
-</template>
-
-<template name="chatter">
-  <li class="{{style}}">{{chatterName}}</li>
-</template>
-
-<template name="message">
-  <li class="{{style}}">
-    <span class="chat-name">{{messageName}}</span>
-    <span class="chat-text">{{messageText}}</span>
-  </li>
-</template>
-
-<template name="session">
-  <div class="container">
-    <h1 class="title">Simple chat</h1>
-    <div class="form-box row">
-      <p>
-        <button class="new-chat">Start new chat</button>
-      </p>
-      <p>
-        <button class="join-chat">Join a chat</button>
-        <input type="text" class="chat-choice" value="chat-code">
-      </p>
-    </div>
-  </div>
-</template>
