--- a/imports/ui/chatter.html
+++ b/imports/ui/chatter.html
@@ -1,4 +1,4 @@
 <template name="chatter">
-  <li class="{{style}}">{{chatterName}}</li>
+  <li class="{{color}} chatter">{{this}}</li>
 </template>
 
