--- a/imports/ui/chat.html
+++ b/imports/ui/chat.html
@@ -3,24 +3,27 @@
   <div class="container">
     <h1>Chat #{{chatName}}</h1>
     <div class="row">
-      <div class="chat-box">
-        <div class="guest-list four columns u-pull-right">
+      <div class="five columns u-pull-left chat-window">
+        {{#each messages}}
+          {{> message }}
+        {{/each}}
+        <div class="row chat-bottom-spacer">
+        </div>
+      </div>
+      <div class="chatter-list four columns u-pull-right">
+        <ul>
           {{#each chatters}}
             {{> chatter }}
           {{/each}}
-        </div>
+        </ul>
       </div>
-        <div class="five columns u-pull-left chat-window">
-          {{#each messages}}
-            {{> message }}
-          {{/each}}
-          <div class="row chat-bottom-spacer">
-          </div>
-        </div>
     </div>
     <div class="row">
       <div class="five columns u-pull-left">
         <input class="chat-input" type="text">
+      </div>
+      <div class="four columns u-pull-right">
+        <button class=".leave-chat">Leave Chat</button>
       </div>
     </div>
   </div>
